--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,11 +1,4 @@
-@mixin font-face($font-family, $file-path, $weight: normal, $style: normal) {
-    @font-face {
-        font-family: $font-family;
-        font-weight: $weight;
-        font-style: $style;
-        src: url('#{$file-path}.ttf') format('truetype');
-    }
-}
+@import "mixins";
 
 @include font-face('Inter', '~@fonts/Inter/Inter-Thin', 100);
 @include font-face('Inter', '~@fonts/Inter/Inter-ExtraLight', 200);
